--- a/public/index.html
+++ b/public/index.html
@@ -10,89 +10,87 @@
   </style>
 </head>
 <body>
-  <script src="//js.pusher.com/2.2/pusher.js"></script>
-  <script src="//webrtc-experiment.com/DataChannel.js"></script>
-  <script>
-var datachannel = new DataChannel();
+  <hr>
+/room-id/<input type="text" id="room-id" placeholder="room-id" style="width: 100px;">/
+<button id="open">Open</button>
+<button id="join">Join</button>
+<hr>
+<div id="chat-container">
+    <input type="text" id="input-text-chat" placeholder="Enter Text Chat" disabled><br>
+    <div class="chat-output"></div>
+</div>
 
-  // Set the userid based on what has been defined by DataChannel
-  // https://github.com/muaz-khan/WebRTC-Experiment/tree/master/DataChannel#use-custom-user-ids
-  datachannel.userid = window.userid;
+<link rel="stylesheet" href="style.css">
 
-var pusher = new Pusher('4f12dd5c9b8a00e59b61', {
-  cluster: 'eu',
-});
-
-  // Storage of Pusher connection socket ID
-  var socketId;
-
-  Pusher.log = function(message) {
-    if (window.console && window.console.log) {
-      window.console.log(message);
+<script src="/socket.io/socket.io.js"></script>
+<script src="/reliable-signaler/signaler.js"></script>
+<script src="/DataChannel.js"></script>
+<script>
+// initializing DataChannel.js constructor.
+var channel = new DataChannel();
+// using reliable-signaler
+var signaler = initReliableSignaler(channel, '/');
+channel.ondatachannel = function() {};
+document.getElementById('open').onclick = function() {
+    var roomid = document.getElementById('room-id').value;
+    if (roomid.replace(/^\s+|\s+$/g, '').length <= 0) {
+        alert('Please enter room-id');
+        document.getElementById('room-id').focus();
+        return;
     }
-  };
 
-  // Monitor Pusher connection state
-  pusher.connection.bind("state_change", function(states) {
-    switch (states.current) {
-      case "connected":
-        socketId = pusher.connection.socket_id;
-      break;
-      case "disconnected":
-      case "failed":
-      case "unavailable":
-      break;
-    }
-  });
+    signaler.createNewRoomOnServer(roomid, function() {
+        document.getElementById('open').disabled = true;
 
-  // Set custom Pusher signalling channel
-// https://github.com/muaz-khan/WebRTC-Experiment/blob/master/Signaling.md
-datachannel.openSignalingChannel = function(config) {
-  var channel = config.channel || this.channel || "default-channel";
-  var xhrErrorCount = 0;
-
-  var socket = {
-    send: function(message) {
-      fetch('/message', {
-        method: "POST",
-        body: JSON.stringify({
-          socketId: socketId,
-          channel: channel,
-          message: message
-        }),
-        headers: {
-          'content-type': 'application/json'
-        },
-      }).then(data => {
-        xhrErrorCount = 0;
-      }).catch(() => {
-        xhrErrorCount++;
-        if (xhrErrorCount > 5) {
-          console.log("Disabling signaller due to connection failure");
-          datachannel.transmitRoomOnce = true;
-        }
-      });
-    },
-    channel: channel
-  };
-
-  // Subscribe to Pusher signalling channel
-  var pusherChannel = pusher.subscribe(channel);
-
-  // Call callback on successful connection to Pusher signalling channel
-  pusherChannel.bind("pusher:subscription_succeeded", function() {
-    if (config.callback) config.callback(socket);
-  });
-
-  // Proxy Pusher signaller messages to DataChannel
-  pusherChannel.bind("message", function(message) {
-    config.onmessage(message);
-  });
-
-  return socket;
+        channel.userid = roomid;
+        channel.transmitRoomOnce = true;
+        channel.open(roomid);
+    });
 };
+document.getElementById('join').onclick = function() {
+    var roomid = document.getElementById('room-id').value;
+    if (roomid.replace(/^\s+|\s+$/g, '').length <= 0) {
+        alert('Please enter room-id');
+        document.getElementById('room-id').focus();
+        return;
+    }
 
+    this.disabled = true;
+    signaler.getRoomFromServer(roomid, function(roomid) {
+        channel.connect(roomid); // setting 'channel' & connecting socket
 
-  </script>
+        // setting 'roomToken' and 'broadcaster' and joining
+        channel.join({
+            id: roomid,
+            owner: roomid
+        });
+    });
+};
+channel.onopen = function() {
+    document.getElementById('input-text-chat').disabled = false;
+};
+document.getElementById('input-text-chat').onkeyup = function(e) {
+    if(e.keyCode != 13) return;
+
+    // removing trailing/leading whitespace
+    this.value = this.value.replace(/^\s+|\s+$/g, '');
+    if (!this.value.length) return;
+
+    channel.send(this.value);
+    appendDIV(this.value);
+    this.value =  '';
+};
+channel.onmessage = appendDIV;
+var chatContainer = document.querySelector('.chat-output');
+// a custom method used to append a new DIV into DOM
+function appendDIV(event) {
+    var div = document.createElement('div');
+    div.innerHTML = event.data || event;
+    chatContainer.insertBefore(div, chatContainer.firstChild);
+    div.tabIndex = 0; div.focus();
+
+    document.getElementById('input-text-chat').focus();
+}
+</script>
 </body>
 </html>
