--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,10 @@
 
 <link rel="stylesheet" href="style.css">
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="/reliable-signaler/signaler.js"></script>
-<script src="/DataChannel.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+<script src="//cdn.webrtc-experiment.com/DataChannel.js"> </script>
+<script src="/public/signaler.js"></script>
+
 <script>
 // initializing DataChannel.js constructor.
 var channel = new DataChannel();
