--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
 <script src="//cdn.webrtc-experiment.com/DataChannel.js"> </script>
-<script src="/public/signaler.js"></script>
+<script src="/signaler.js"></script>
 
 <script>
 // initializing DataChannel.js constructor.
